# lit-review-serverless

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  DEPLOYMENT.md  ERRORS_AND_FIXES.md  ERROR_AND_FIXES.md  README.md  cleanup.sh
backend/: .dockerignore  API_USAGE.md  Dockerfile.lambda  LAMBDA_DEPLOYMENT.md  build-lambda.sh  config.py  lambda_function.py  pipeline.py  pyproject.toml  requirements.txt  s3_storage.py  samconfig.toml  server.py  template.yaml  workflow.md
backend/agents/generate_agent/: Dockerfile  agent.py  deploy.sh  requirements.txt
backend/agents/retrieve_rank_agent/: Dockerfile  agent.py  deploy.sh  requirements.txt
backend/events/: generate_event.json  retrieve_rank_event.json  upload_event.json
backend/iam/: agentcore-role-policy.json
backend/lambdas/generate/: handler.py  requirements.txt
backend/lambdas/retrieve_rank/: handler.py
backend/lambdas/session_status/: handler.py  requirements.txt
backend/lambdas/upload_index/: handler.py  requirements.txt
backend/shared/: Makefile  config.py  dynamodb_session.py  pipeline.py  vectorstore.py
backend/tests/: test_dynamodb_session.py
frontend/: SETUP.md  package-lock.json  package.json  types.d.ts
frontend/app/: globals.css  layout.tsx  page.tsx
