[project]
name = "lit-review-serverless"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.55",
    "fastapi>=0.128.8",
    "langchain>=0.3.26",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-community>=0.3.27",
    "mangum>=0.19.0",
    "numpy>=2.0.2",
    "openai>=2.22.0",
    "openai-agents>=0.8.4",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.39.0",
    "tqdm>=4.66.0",
]
