[project]
name = "lit-review-serverless"
version = "0.2.0"
requires-python = ">=3.12"
description = "Serverless literature review pipeline on AWS (Lambda + AgentCore + DynamoDB)"

# Local dev dependencies — each Lambda/agent has its own requirements.txt for deployment
dependencies = [
    "boto3>=1.42.55",
    "openai>=2.22.0",
    "openai-agents>=0.8.4",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "python-multipart>=0.0.9",
    "bedrock-agentcore>=1.6.0",
]

[dependency-groups]
dev = [
    "moto[dynamodb,s3]>=5.0.0",
    "pytest>=8.0.0",
]
